// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetReplyAndGetArticle GetArticle feedbacks should work: feedback loading test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "feedbackCount": 1,
          "feedbacks": Array [
            Object {
              "score": 1,
            },
          ],
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 1,
        },
        Object {
          "feedbackCount": 0,
          "feedbacks": Array [],
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 0,
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work: relatedArticle filter test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJkb2MjZm9vMyJd",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.37905684,
          },
          Object {
            "cursor": "WyJkb2MjZm9vMiJd",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work: relatedArticle no-param test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJkb2MjZm9vMyJd",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.37905684,
          },
          Object {
            "cursor": "WyJkb2MjZm9vMiJd",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work: relatedArticle sorting test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuMzY3MjExMywiZG9jI2ZvbzIiXQ==",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
          Object {
            "cursor": "WzAuMzc5MDU2ODQsImRvYyNmb28zIl0=",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.37905684,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should allow filtering article replies 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "reply": Object {
            "id": "fofo",
          },
          "replyId": "fofo",
          "status": "NORMAL",
        },
        Object {
          "reply": Object {
            "id": "bar2",
          },
          "replyId": "bar2",
          "status": "DELETED",
        },
      ],
      "deletedReplies": Array [
        Object {
          "reply": Object {
            "id": "bar2",
          },
          "replyId": "bar2",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "reply": Object {
            "id": "fofo",
          },
          "replyId": "fofo",
          "status": "NORMAL",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should get the specified article & associated replies from ID 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "id": "foo",
          },
          "articleId": "foo",
          "canUpdateStatus": false,
          "createdAt": "2015-01-01T12:10:30Z",
          "reply": Object {
            "id": "bar",
            "reference": "barbar",
            "text": "bar",
            "type": "NOT_ARTICLE",
          },
          "replyId": "bar",
          "status": "NORMAL",
          "updatedAt": "2015-01-02T12:10:30Z",
        },
      ],
      "references": Array [
        Object {
          "type": "LINE",
        },
      ],
      "replyCount": 1,
      "replyRequestCount": 1,
      "replyRequests": Array [
        Object {
          "feedbackCount": 2,
          "negativeFeedbackCount": 1,
          "positiveFeedbackCount": 1,
          "reason": "Reason foo",
        },
      ],
      "requestedForReply": true,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should allow filtering article replies 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "id": "foo2",
          },
          "articleId": "foo2",
          "status": "NORMAL",
        },
        Object {
          "article": Object {
            "id": "foo3",
          },
          "articleId": "foo3",
          "status": "DELETED",
        },
      ],
      "deletedReplies": Array [
        Object {
          "article": Object {
            "id": "foo3",
          },
          "articleId": "foo3",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "article": Object {
            "id": "foo2",
          },
          "articleId": "foo2",
          "status": "NORMAL",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should get the specified reply & associated articles from ID 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "text": "Lorum ipsum",
          },
          "articleId": "foo",
          "canUpdateStatus": true,
        },
      ],
      "reference": "barbar",
      "text": "bar",
      "type": "NOT_ARTICLE",
    },
  },
}
`;
